Now /coords command uses a different file for each player