@@ -2,24 +2,20 @@ package it.pixel.serverhandbook.service.coords;
 
 import it.pixel.serverhandbook.model.Coordinate;
 import it.pixel.serverhandbook.service.BaseService;
-import it.pixel.serverhandbook.service.FileManager;
+import it.pixel.vectors.Vector3i;
+import org.bukkit.Location;
 import org.bukkit.entity.Player;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import static it.pixel.files.FileManager.readFile;
 import static it.pixel.serverhandbook.service.TextManager.*;
 
 /**
  * The type Coords utils.
  */
 public abstract class CoordsUtils extends BaseService {
-
-    /**
-     * The constant COORDS_FILE.
-     */
-    public static final String COORDS_FILE = "plugins/ServerHandbook/coords.dxl";
 
     /**
      * The constant PARAM_ADD.
@@ -42,15 +38,29 @@ public abstract class CoordsUtils extends BaseService {
     public static final String PARAM_SHARE = "share";
 
     /**
+     * The constant PARAM_DEL.
+     */
+    public static final String PARAM_DEL = "del";
+
+
+    /**
      * Gets coords as string.
      *
-     * @param x the x
-     * @param y the y
-     * @param z the z
+     * @param xyz the xyz
      * @return the coords as string
      */
-    public static String getCoordsAsString(int x, int y, int z) {
-        return String.format("%s %s %s", x, y, z);
+    public static String getCoordsAsString(Vector3i xyz) {
+        return String.format("%s %s %s", xyz.x(), xyz.y(), xyz.z());
+    }
+
+    /**
+     * Gets coords as string.
+     *
+     * @param xyz the xyz
+     * @return the coords as string
+     */
+    public static String getCoordsAsString(Location xyz) {
+        return String.format("%s %s %s", xyz.getBlockX(), xyz.getBlockY(), xyz.getBlockZ());
     }
 
     /**
@@ -58,15 +68,16 @@ public abstract class CoordsUtils extends BaseService {
      *
      * @param player the player
      * @return the all coords by player
-     * @throws IOException the io exception
+     * @throws IOException            the io exception
+     * @throws ClassNotFoundException the class not found exception
      */
     protected static List<Coordinate> findAllCoordsByPlayer(Player player) throws IOException, ClassNotFoundException {
 
-        return FileManager.readFile(COORDS_FILE)
+        return readFile(getFileName(player))
                 .stream()
                 .map(s -> (Coordinate) s)
-                .filter(c -> !c.deleted() && c.playerName().equalsIgnoreCase(player.getName()))
-                .collect(Collectors.toList());
+                .filter(c -> !c.deleted())
+                .toList();
     }
 
     /**
@@ -75,16 +86,18 @@ public abstract class CoordsUtils extends BaseService {
      * @param player    the player
      * @param searchKey the search key
      * @return the list
-     * @throws IOException the io exception
+     * @throws IOException            the io exception
+     * @throws ClassNotFoundException the class not found exception
      */
     protected static List<Coordinate> findAllCoordsByPlayerAndDescription(Player player, String searchKey) throws IOException, ClassNotFoundException {
 
-        return FileManager.readFile(COORDS_FILE)
+        return readFile(getFileName(player))
                 .stream()
                 .map(s -> (Coordinate) s)
-                .filter(c -> !c.deleted() && c.playerName().equalsIgnoreCase(player.getName()) && c.description().contains(searchKey))
-                .collect(Collectors.toList());
+                .filter(c -> !c.deleted() && c.description().contains(searchKey))
+                .toList();
     }
+
 
     /**
      * Prepare coordinate string string.
@@ -94,7 +107,7 @@ public abstract class CoordsUtils extends BaseService {
      */
     public static String prepareCoordinateString(Coordinate c) {
         String dimension = textColorByDimension(getEnvironmentFormDimension(c.dimension()), getDimensionName(getEnvironmentFormDimension(c.dimension())));
-        String coords = textColorByDimension(getEnvironmentFormDimension(c.dimension()), getCoordsAsString(c.xyz().x(), c.xyz().y(), c.xyz().z()));
+        String coords = textColorByDimension(getEnvironmentFormDimension(c.dimension()), getCoordsAsString(c.xyz()));
         String desc = textDescription(c.description());
         return dimension + textInfo(" • ") + coords + textInfo(" → ") + desc;
     }
